# libpatch6n

./: CMakeLists.txt  README.md
demo/: 1_mixin_head.cc
src/libpatch6n/: patch.hh  patchable.hh  platform_id.hh
src/libpatch6n/asm/: amd64.hh  util.hh
src/libpatch6n/platform/: amd64_sysvabi_posix.cc
